# mc-option-pricer

./: .gitignore  README.md  calibration_ASML_20260120_172322_meta.json  calibration_ASML_20260120_172322_prices.csv  calibration_COST_20260120_171216_meta.json  calibration_COST_20260120_171216_prices.csv  calibration_NVDA_20260121_121501_meta.json  calibration_NVDA_20260121_121501_prices.csv  calibration_NVDA_20260125_182921_meta.json  calibration_NVDA_20260125_182921_prices.csv  calibration_TSLA_20260121_121004_meta.json  calibration_TSLA_20260121_121004_prices.csv  calibration_^SPX_20260130_104951_meta.json  calibration_^SPX_20260130_105033_meta.json  calibration_^SPX_20260130_105033_prices.csv  calibration_^SPX_20260130_110305_meta.json  calibration_^SPX_20260130_110447_prices.csv  calibration_^SPX_20260130_112628_meta.json  calibration_^SPX_20260130_112628_prices.csv  calibration_^SPX_20260130_113051_meta.json  calibration_^SPX_20260130_113051_prices.csv  calibration_^SPX_20260130_113116_meta.json  calibration_^SPX_20260130_113116_prices.csv  calibration_^SPX_20260130_113208_meta.json  calibration_^SPX_20260130_113452_meta.json  calibration_^SPX_20260130_113452_prices.csv  pyproject.toml  requirements.txt  run_simulation.py
examples/: 1_market_calibration.py  1_market_calibration2.py  3_convergence_analysis.py  4_validation_2.py  4_validation_IVsurfaceplotting.py  benchmark_speed.py  calibrate_data.py  compare.models.py  fetch_data.py  plot.py  plot_volatility_surface.py  run_calibration.py  run_simulation.py  test_heston.py  validate_heston.py  (+1 more)
src/: instruments.py
(+26 files in other folders)
