[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlib"
version = "0.1.0"
description = "Object-Oriented Monte Carlo Option Pricing Library"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "matplotlib",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]